--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css" />
     <title>Document</title>
 </head>
 <body>
+<!-- Intro -->
     <center>
-    <h1>CREATE TASK PROJECT TITLE HERE</h1>
+    <h1 class="projectTitle">CREATE TASK PROJECT TITLE HERE</h1>
     <p>This is a project for my csp class</p>
     </center>
 
-    <div style="position: relative; text-align: center;">
-        <p>this is the bottom text</p>
-    </div>
+    <button>Instructions</button>
+
 
 </body>
 </html>
