--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
 <body>
 <!-- Intro -->
     <center>
-    <h1 class="projectTitle">CREATE TASK PROJECT TITLE HERE</h1>
+    <h1 class="projectTitle">CREATE TASK PROJECT TITLE HERE </h1>
     <p>This is a project for my csp class</p>
     </center>
 
-    <button>Instructions</button>
+<!-- Instructions -->
+    <div id="instruct-button" >   
+        <button onclick="alert('Click on the buttons.....')">Instructions</button>
+    </div>
+
+    <div class="choice-buttons" >
+        <button>Button 1</button>
+        <button>Button h2</button>
+        <button>Button 3</button>
+        <button>Button 4</button>
+    </div>
 
 
 </body>
